--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ master ]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+  
 jobs:
   run-tests:
     runs-on: ubuntu-latest
