--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -3,6 +3,10 @@ name: Security Checks
 on:
   pull_request:
     branches: [ master ]
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   security-scan:
