--- a/.github/workflows/version-update.yml
+++ b/.github/workflows/version-update.yml
@@ -20,20 +20,22 @@ jobs:
 
       - name: Get merged pull request
         id: pr
-        uses: actions-ecosystem/action-get-merged-pull-request@v1
+        uses: peter-evans/find-merged-pull-request@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit: ${{ github.sha }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Debug PR data
         run: |
-          echo "head_ref: ${{ steps.pr.outputs.head_ref }}"
+          echo "head_ref: ${{ steps.pr.outputs.source_branch }}"
           echo "title: ${{ steps.pr.outputs.title }}"
           echo "number: ${{ steps.pr.outputs.number }}"
 
       - name: Detect branch type
         id: branch
         run: |
-          src_branch="${{ steps.pr.outputs.head_ref }}"
+          src_branch="${{ steps.pr.outputs.source_branch }}"
           echo "Source branch is: ${src_branch}"
           if [[ "$src_branch" == feature/* ]]; then
             echo "type=feature" >> "$GITHUB_OUTPUT"
